--- a/WalletPlus Inc.Web/Views/Customer/Index.cshtml
+++ b/WalletPlus Inc.Web/Views/Customer/Index.cshtml
@@ -20,7 +20,7 @@
                 <th>Country</th>
                 <th>State</th>
                 <th>City</th>
-                <th width="40px">Active</th>
+                <th width="40px">Action</th>
                 
              </tr>
         </thead>
@@ -37,7 +37,7 @@
                     <td>@customer.Country</td>
                     <td>@customer.State</td>
                     <td>@customer.City</td>
-                    <td>@customer.Active</td>
+                    @*<td>@customer.Active</td>*@
                     <td width="150px">
                         <a asp-action="Edit" asp-controller="Customer" asp-route-id="@customer.Id" class="btn btn-white btn-sm"><i class="fa fa-edit"></i> Edit</a>
                         <a asp-action="Delete" asp-controller="Customer" asp-route-id="@customer.Id" onclick="return confirm('Are you sure you want to delete?')" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</a>
